--- a/form.html
+++ b/form.html
@@ -10,12 +10,13 @@
 <body>
 <style>
 
-    *{
+    * {
         padding: 0;
         margin: 0;
         box-sizing: border-box;
         font-family: Arial, Helvetica, sans-serif;
     }
+
     .wrapper {
         display: flex;
         align-items: center;
@@ -23,7 +24,7 @@
         min-height: 100vh;
     }
 
-    .form{
+    .form {
         height: 400px;
         width: 400px;
         border: 1px solid #dadada;
@@ -32,20 +33,20 @@
         padding: 20px;
     }
 
-    .heading{
+    .heading {
         text-align: center;
         padding: 10px;
         font-size: 30px;
     }
 
-    .form-group{
+    .form-group {
         display: flex;
         flex-direction: column;
         gap: 8px;
         margin-bottom: 10px;
     }
 
-    .form-input{
+    .form-input {
         height: 36px;
         padding: 0 16px;
         border: 1px solid #dadada;
@@ -53,11 +54,11 @@
         border-radius: 4px;
     }
 
-    .form-input:focus{
+    .form-input:focus {
         border: 1px solid #1877f2;
     }
 
-    .form-button{
+    .form-button {
         height: 36px;
         min-width: 80px;
         border-radius: 4px;
@@ -66,19 +67,21 @@
         cursor: pointer;
         background-color: #1877f2;
         color: #fff;
+        margin-top: 10px;
 
     }
-    .form-button:hover{
+
+    .form-button:hover {
         background-color: dodgerblue;
     }
 
 </style>
 <div class="wrapper">
-    <form class="form">
+    <div class="form">
         <h3 class="heading">Đăng nhập</h3>
         <div class="form-group">
             <label class="form-lable" for="username">Tên đăng nhập</label>
-            <input id="username" class="form-input" type="text" placeholder="Nhập tên của bạn...">
+            <input value="Ngọ Văn Quý" id="username" class="form-input" type="text" placeholder="Nhập tên của bạn...">
         </div>
         <div class="form-group">
             <label class="form-lable" for="email">Email</label>
@@ -89,11 +92,14 @@
             <input id="password" class="form-input" type="password" placeholder="Nhập mật khẩu của bạn...">
         </div>
         <div class="form-group">
-           <button class="form-button">Đăng nhập</button>
+            <button class="form-button" onclick="hanleSubmit()">Đăng nhập</button>
         </div>
         <span class="span">Bạn đã có tài khoản chưa?</span>
-        <a class="link-register" href="register">Đăng kí tài khoản</a>
-    </form>
+        <a href="#" class="link-register">Đăng nhập</a>
+    </div>
 </div>
+<script>
+    const PI = Math.PI
+</script>
 </body>
 </html>
